k8s/admin-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-gateway-admin
  namespace: qubership-mesh
  labels:
    app.kubernetes.io/name: internal-gateway-admin
    app.kubernetes.io/part-of: gateway-admin-ui
spec:
  selector:
    name: internal-gateway
  ports:
    - name: admin
      port: 9901
      targetPort: 9901
---
apiVersion: v1
kind: Service
metadata:
  name: private-gateway-admin
  namespace: qubership-mesh
  labels:
    app.kubernetes.io/name: private-gateway-admin
    app.kubernetes.io/part-of: gateway-admin-ui
spec:
  selector:
    name: private-frontend-gateway
  ports:
    - name: admin
      port: 9901
      targetPort: 9901
---
apiVersion: v1
kind: Service
metadata:
  name: public-gateway-admin
  namespace: qubership-mesh
  labels:
    app.kubernetes.io/name: public-gateway-admin
    app.kubernetes.io/part-of: gateway-admin-ui
spec:
  selector:
    name: public-frontend-gateway
  ports:
    - name: admin
      port: 9901
      targetPort: 9901
